--- a/conf.yml
+++ b/conf.yml
@@ -5,7 +5,7 @@ info:
   version: "1.0.0"
   target: "beta-2026-01"
   author: "Antigravity"
-  icon: ''
+  icon: 'resources/icon.jpg'
   website: ''
 
 admin:
